[tool.poetry]
name = "request-system"
version = "0.1.0"
description = ""
authors = ["Andre Oliveira <88242664+andreluoliveira82@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
